# algorithm_visualizer

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: algorithms.rs  lib.rs  main.rs
