[package]
name = "algorithm_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
egui_extras = { version = "0.33.3", features = ["image"] }
fastrand = "2.3.0"
catppuccin-egui = { version = "5.7.0", default-features = false, features = [
    "egui33",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
